--- a/Web Pages/ProfilePrivateView.css
+++ b/Web Pages/ProfilePrivateView.css
@@ -297,9 +297,8 @@ h3 {
 /* Rank Text */
 .next-rank {
     text-align: center;
-    font-size: 18px;
-    font-weight: bold;
-    color: #0a3a88;
+    font-size: 20px;
+    color: #07471f;
     margin-top: 10px;
 }
 
