--- a/Web Pages/HomePage.css
+++ b/Web Pages/HomePage.css
@@ -141,6 +141,7 @@ body {
 .feature-row {
   display: flex;
   justify-content: center;
+  margin-bottom: 50px;
   margin-left: 20px;
   gap: 50px;
   width: 100%;
