--- a/Web Pages/SchoolPage.css
+++ b/Web Pages/SchoolPage.css
@@ -547,3 +547,16 @@ h3 {
     width: auto;
     object-fit: cover;
 }
+
+.emoji-icon {
+    width: 20px;
+    height: 20px;
+    vertical-align: middle;
+    margin-right: 4px;
+  }
+  
+.icon {
+    width: 16px;      
+    height: 16px;
+    vertical-align:text-top;
+}
